alignment fixes for mobile view

--- a/src/sections/navbar/Navbar.css
+++ b/src/sections/navbar/Navbar.css
@@ -43,7 +43,7 @@
 
 @media screen and (max-width: 600px) {
   .header {
-    width: 330px;
+    width: 350px;
     top: 20px;
     right: 50px;
     left: 50px;
